fix styles and horizontal scroll

--- a/src/components/slider/Banner/Banner.module.scss
+++ b/src/components/slider/Banner/Banner.module.scss
@@ -3,17 +3,27 @@
 
 .bannerLabelContainer {
   position: relative;
-
+  width: 30px;
+  height: 20px;
   display: inline-block;
+
+  @include media-min($breakpoint-tablet) {
+    width: 68px;
+    height: 44px;
+  }
 }
 
 .bannerIcon {
-  fill: #e5ff46;
+  fill: var(--not-active);
 
   @include media-min($breakpoint-tablet) {
-    width: 128px;
-    height: 82px;
+    width: 100%;
+    height: 100%;
   }
+}
+
+.bannerIconSale {
+  fill: var(--error);
 }
 
 .bannerLabel {
@@ -23,10 +33,10 @@
   translate: -50% -50%;
 
   font-weight: 400;
-  font-size: 8px;
+  font-size: 6px;
 
   @include media-min($breakpoint-tablet) {
-    font-size: 24px;
+    font-size: 14px;
   }
 }
 
@@ -74,12 +84,12 @@
 }
 
 .bannerButton {
-  border-radius: 3px;
+  border-radius: 4px;
   padding: 4px 10px;
-  height: 23px;
+  height: 14px;
 
   font-weight: 400;
-  font-size: 12px;
+  font-size: 5px;
 
   @include media-min($breakpoint-tablet) {
     margin-top: 10px;
